# rnn-lstm-stock-forecasting

./: .gitignore  DATA_PROVENANCE.md  LICENSE  README.md  pyproject.toml  requirements.txt  rnn_lstm_stock_forecasting.ipynb
.github/workflows/: smoke.yml
data/: OXY_Stock_Price_Test.xlsx  OXY_Stock_Price_Train.xlsx  README.md
docs/: portfolio_summary.md  project_summary.md
notebooks/: README.md  rnn_lstm_stock_forecasting.ipynb
results/: README.md  baseline_metrics.csv  comparison_metrics.csv  model_metrics.csv
results/forecast_plots/: README.md
scripts/: check_result_artifacts.py  export_notebook_plots.py  run_baseline.py
src/rnn_lstm_stock_forecasting/: __init__.py  baseline_cli.py  baselines.py  data.py  metrics.py  sequences.py
tests/: test_baselines.py  test_data.py  test_metrics.py  test_sequences.py
