[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnn-lstm-stock-forecasting"
version = "0.1.0"
description = "Reusable helpers and validation checks for an RNN/LSTM financial time-series forecasting project."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "Hongyu Su" }]
dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
notebook = [
    "tensorflow>=2.15,<2.17",
    "matplotlib>=3.8,<4",
    "jupyter>=1.0,<2",
    "ipykernel>=6.0,<7",
]

[project.scripts]
rnn-lstm-baseline = "rnn_lstm_stock_forecasting.baseline_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
